--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
    </section>
 
-   <section class="news">
+   <section class="news wrapper">
     <div class="news_inner">
       <h1>NEWS</h1>
       <p class="line"></p>
@@ -115,14 +115,12 @@
         <ul class="service_list">
     
           <li class="service_item service1">
-            <h4>SERVICE</h4>
             <div class="service_img"><img src="img/service.png" alt="サービス画像"></div>
               <p>
                「人生をコードと共に」というミッションを掲げ、よりプログラミングを学習しやすい環境を提供しています。また、WithCode+の教材を通じて日本社会に優秀なIT人材を輩出します。
               </p>
           </li>
           <li class="service_item service2">
-            <h4>SERVICE</h4>
             <div class="service_img"><img src="img/service.png" alt="サービス画像"></div>
               <p>
                「人生をコードと共に」というミッションを掲げ、よりプログラミングを学習しやすい環境を提供しています。また、WithCode+の教材を通じて日本社会に優秀なIT人材を輩出します。
