--- a/html/service.html
+++ b/html/service.html
@@ -20,7 +20,7 @@
  <body>
  <header>
   <div class="header_all wrapper">
-    <a href="index.html" class="header_logo"><img src="../img/company_logo.png" alt="ロゴ画像"></a>
+    <a href="../index.html" class="header_logo"><img src="../img/company_logo.png" alt="ロゴ画像"></a>
     <nav class="navbar">
       <ul>
         <li><a href="../index.html">TOP</a></li>
