--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
       <h2>会社概要</h2>
       <div class="about_tag">
         <ul class="about_list">
-          <li class="about_tag1">method</li>
-          <li class="about_tag2">revolution</li>
+          <li class="about_tag1">METHOD</li>
+          <li class="about_tag2">REVOLUTION</li>
         </ul>
       </div>
       <div class="about_box">
@@ -167,7 +167,7 @@
             <label class="label" for="name" name="name">お問い合わせ内容</label>
             <textarea id="message" name="comment" cols="30" rows="10"></textarea>
           </div>
-            <div class="contact_button"><a href="https://withcode.tech">ここから送信</a></div>
+            <div class="contact_button"><a href="https://withcode.tech">SUBMIT</a></div>
         </form>
         </div>
     </section>
